--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="../examples/smoke/">UVanimation</a></li>
+		<li><a href="../examples/UVanimation/">UVanimation</a></li>
 	</ul>
 </body>
 </html>
