--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
 <body>
 	<ul>
 		<li><a href="../examples/UVanimation/dist/">UVanimation</a></li>
+		<li><a href="../examples/split-rgba-texture/dist/">split-rgba-texture</a></li>
 	</ul>
 </body>
 </html>
