--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
 	<ul>
 		<li><a href="../examples/UVanimation/dist/">UVanimation</a></li>
 		<li><a href="../examples/split-rgba-texture/dist/">split-rgba-texture</a></li>
-		<li><a href="../examples/uv-vertex-animation/dist/">uv-vertex-animation</a></li>
+		<li><a href="../examples/uv-shift-animation/dist/">uv-shift-animation</a></li>
 	</ul>
 </body>
 </html>
