--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,7 @@
 		<li><a href="../examples/UVanimation/dist/">UVanimation</a></li>
 		<li><a href="../examples/split-rgba-texture/dist/">split-rgba-texture</a></li>
 		<li><a href="../examples/uv-shift-animation/dist/">uv-shift-animation</a></li>
+		<li><a href="../examples/vertex-animation-texture/dist/">vertex-animation-texture(VAT)</a></li>
 	</ul>
 </body>
 </html>
