--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@
 		<li><a href="../examples/split-rgba-texture/dist/">split-rgba-texture</a></li>
 		<li><a href="../examples/uv-shift-animation/dist/">uv-shift-animation</a></li>
 		<li><a href="../examples/vertex-animation-texture/dist/">vertex-animation-texture(VAT)</a></li>
-		<li><a href="../examples/dissolve/">dissolve</a></li>
+		<li><a href="../examples/dissolve/dist/">dissolve</a></li>
 	</ul>
 </body>
 </html>
