--- a/examples/index.html
+++ b/examples/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<ul>
-		<li><a href="../examples/UVanimation/dist/">UVanimation</a></li>
+		<li><a href="../examples/uv-animation/dist/">uv-animation</a></li>
 		<li><a href="../examples/split-rgba-texture/dist/">split-rgba-texture</a></li>
 		<li><a href="../examples/uv-shift-animation/dist/">uv-shift-animation</a></li>
-		<li><a href="../examples/vertex-animation-texture/dist/">vertex-animation-texture(VAT)</a></li>
 		<li><a href="../examples/dissolve/dist/">dissolve</a></li>
+		<li><a href="../examples/vat-soft-body/dist">vertex-animation-texture(VAT) Soft Body</a></li>
 	</ul>
 </body>
 </html>
