vat rigid body wip

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,7 @@
 		<li><a href="../examples/uv-shift-animation/dist/">uv-shift-animation</a></li>
 		<li><a href="../examples/dissolve/dist/">dissolve</a></li>
 		<li><a href="../examples/vat-soft-body/dist">vertex-animation-texture(VAT) Soft Body</a></li>
+		<li><a href="../examples/vat-rigid-body/dist/">vertex-animation-texture(VAT) Rigid Body</a></li>
 	</ul>
 </body>
 </html>
