--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
 		<li><a href="../examples/vat-soft-body/dist">vertex-animation-texture(VAT) Soft Body</a></li>
 		<li><a href="../examples/vat-rigid-body/dist/">vertex-animation-texture(VAT) Rigid Body</a></li>
 		<li><a href="../examples/vat-fluid-body/dist/">vertex-animation-texture(VAT) Fluid Body</a></li>
+		<li><a href="../examples/vat-sprite-body/dist/">vertex-animation-texture(VAT) Sprite Body</a></li>
 	</ul>
 </body>
 </html>
