--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
 		<li><a href="../examples/vat-rigid-body/dist/">vertex-animation-texture(VAT) Rigid Body</a></li>
 		<li><a href="../examples/vat-fluid-body/dist/">vertex-animation-texture(VAT) Fluid Body</a></li>
 		<li><a href="../examples/vat-sprite-body/dist/">vertex-animation-texture(VAT) Sprite Body</a></li>
+		<li><a href="../examples/pseudo-back-scattering/dist/">pseudo back scattering</a></li>
 	</ul>
 </body>
 </html>
