--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
 		<li><a href="../examples/vat-fluid-body/dist/">vertex-animation-texture(VAT) Fluid Body</a></li>
 		<li><a href="../examples/vat-sprite-body/dist/">vertex-animation-texture(VAT) Sprite Body</a></li>
 		<li><a href="../examples/pseudo-back-scattering/dist/">pseudo back scattering</a></li>
-		<li><a href="../examples/dither-temporal-aa/dist/">dither temporal AA translucent</a></li>
+		<!-- <li><a href="../examples/dither-temporal-aa/dist/">dither temporal AA translucent</a></li> -->
 	</ul>
 </body>
 </html>
