--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
 		<li><a href="../examples/pseudo-back-scattering/dist/">pseudo back scattering</a></li>
 		<!-- <li><a href="../examples/dither-temporal-aa/dist/">dither temporal AA translucent</a></li> -->
 		<li><a href="../examples/depth-fade/dist/">depth fade</a></li>
-		<li><a href="../examples/kawase-bloom/dist/">Kawase bloom</a></li>
+		<li><a href="../examples/multi-pass-blur/dist/">multi pass blur</a></li>
 	</ul>
 </body>
 </html>
